# mycoolidea

./: .clang-format  CMakeLists.txt  LICENSE  README.md  file.cuh  log-reg.cu
